--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
-    "socket.io": "^4.7.2",
-    "tymout": "file:.."
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
